--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>React Steps</title>
 </head>
 
 <body>
+  <!-- 리액트에서 생성된 가상요소들이 최종적으로 들어갈 프레임 -->
   <div id="root"></div>
+  <!-- main.jsx라는 파일을 읽어서 root 안쪽에 전달해줌 -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
